--- a/templates/layout.html
+++ b/templates/layout.html
@@ -13,6 +13,8 @@
 
         <link href="/static/styles.css" rel="stylesheet">
 
+        <link href="/static/favicon.ico" rel="icon">
+
         <title>Welcome to Only Connect!</title>
 
         {% block script %}{% endblock %}
