updated file upload logic and README

--- a/templates/invalid_file.html
+++ b/templates/invalid_file.html
@@ -3,9 +3,9 @@
 {% block main %}
 
 <div class="center col-auto">
-    <h1 class="center">Invalid file type. File must be of type .json. Please submit another file.</h1>
+    <h1 class="center">{{ message }} File must be of type .json. Please submit another file.</h1>
 </div>
-<form class="align-items-center" action="/load_game" method="POST">
+<form class="col-auto center" action="/load_game" method="POST" enctype="multipart/form-data">
     <input type="file" id="filename" name="filename">
     <input type="submit" methods="POST">
 </form>
