--- a/templates/index.html
+++ b/templates/index.html
@@ -7,7 +7,7 @@
 </div>
 <h3 class="center" style="padding:20px">Know what you're doing? Upload your question file and get started here!</h3>
 
-<form class="col-auto center" action="/load_game" method="POST">
+<form class="col-auto center" action="/load_game" method="POST" enctype="multipart/form-data">
     <input type="file" id="filename" name="filename">
     <input type="submit">
 </form>
